amended index.html.erb to show restaurants if they exist, else the 'no restaurants' message. using instance variables defined in the controller to bring backend information into the views. avoiding the bad practice of having the view and models interacting directly

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,1 +1,7 @@
-No restaurants yet
+<% if @restaurants.any? %>
+	<% @restaurants.each do |restaurant| %>
+		<%= restaurant.name %>
+	<% end%>
+<% else %>
+	No restaurants yet
+<% end %>
