amended the create action in restaurant controller to save whatever the user inputs into the database. no longer hardcoded with mcdonalds. also formatted the restaurant list better

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,10 @@
 
 <% if @restaurants.any? %>
-	<% @restaurants.each do |restaurant| %>
-		<%= restaurant.name %>
-	<% end%>
+	<ul>
+		<% @restaurants.each do |restaurant| %>
+			<li><%= restaurant.name %></li>
+		<% end%>
+	</ul>
 <% else %>
 	No restaurants yet
 <% end %>
