Edit restaurant feature test created. edit link added to index. error tells me to createthe edit action in controller

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,7 +2,11 @@
 <% if @restaurants.any? %>
 	<ul>
 		<% @restaurants.each do |restaurant| %>
-			<li><%= restaurant.name %></li>
+			<li><%= restaurant.name %> 
+				<a href="/restaurants/<%= restaurant.id %>/edit" >
+					Edit <%= restaurant.name %>
+				</a>
+			</li>
 		<% end%>
 	</ul>
 <% else %>
