--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,7 +4,7 @@
 		<% @restaurants.each do |restaurant| %>
 			<li><%= restaurant.name %> 
 				<%= link_to "Edit", edit_restaurant_path(restaurant) %>
-				<%= link_to "Delete", restaurant_path(restaurant), method: :delete %>
+				<%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %>
 			</li>
 		<% end%>
 	</ul>
