error messages correctly display

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,3 +1,16 @@
+<% if @restaurant.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this post from being saved:</h2>
+ 
+    <ul>
+    <% @restaurant.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <%= form_for @restaurant do |f| %>
 	<%= f.label :name %>
 	<%= f.text_field :name %>
@@ -8,3 +21,4 @@
 	<%= f.submit 'Add' %>
 
 <% end %>
+
