--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -13,10 +13,10 @@
 
 <%= form_for @restaurant do |f| %>
 	<%= f.label :name %>
-	<%= f.text_field :name %>
+	<%= f.text_field :name, required: true %>
 
 	<%= f.label :cuisine %>
-	<%= f.text_field :cuisine %>
+	<%= f.text_field :cuisine, required: true %>
 
 	<%= f.submit 'Add' %>
 
