--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -10,6 +10,7 @@
 				<li><span class="restaurant-name"><%= restaurant.name %> 0 reviews</span> </li>
 					<span class="amend-button"><%= link_to "Edit", edit_restaurant_path(restaurant) %></span>
 					<span class="amend-button"><%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></span>
+					<span class="amend-button"><%= link_to "Review", new_restaurant_review_path(restaurant) %></span>
 				</li>
 			<% end%>
 		</ul>
