--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,15 +5,19 @@
 
 <section id="restaurant-list">
 	<% if @restaurants.any? %>
-		<ul>
-			<% @restaurants.each do |restaurant| %>
-				<li><span class="restaurant-name"><%= restaurant.name %> 0 reviews</span> </li>
+
+		<% @restaurants.each do |restaurant| %>
+				<h2><span class="restaurant-name"><%= restaurant.name %></span> </h2>
 					<span class="amend-button"><%= link_to "Edit", edit_restaurant_path(restaurant) %></span>
 					<span class="amend-button"><%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></span>
 					<span class="amend-button"><%= link_to "Review", new_restaurant_review_path(restaurant) %></span>
-				</li>
+					<h4>0 reviews</h4>
+					<ul>
+						<% restaurant.reviews.each do |review| %>
+							<li><strong><%= review.rating %></strong> <%= review.thoughts %></li>
+						<% end %>
+					</ul>
 			<% end%>
-		</ul>
 	<% else %>
 		No restaurants yet
 	<% end %>
