--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,7 +11,7 @@
 					<span class="amend-button"><%= link_to "Edit", edit_restaurant_path(restaurant) %></span>
 					<span class="amend-button"><%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></span>
 					<span class="amend-button"><%= link_to "Review", new_restaurant_review_path(restaurant) %></span>
-					<h4>0 reviews</h4>
+					<h4><%= pluralize restaurant.reviews.count, 'review' %></h4>
 					<ul>
 						<% restaurant.reviews.each do |review| %>
 							<li><strong><%= review.rating %></strong> <%= review.thoughts %></li>
