--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,16 +7,19 @@
 	<% if @restaurants.any? %>
 
 		<% @restaurants.each do |restaurant| %>
-				<h2><span class="restaurant-name"><%= restaurant.name %></span> </h2>
+				<span class="restaurant-name"><h2><%= restaurant.name %> | <%= restaurant.cuisine %></h2></span>
+				<h4 id="review-count"><%= pluralize restaurant.reviews.count, 'review' %></h4>
 					<span class="amend-button"><%= link_to "Edit", edit_restaurant_path(restaurant) %></span>
 					<span class="amend-button"><%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></span>
 					<span class="amend-button"><%= link_to "Review", new_restaurant_review_path(restaurant) %></span>
-					<h4><%= pluralize restaurant.reviews.count, 'review' %></h4>
+					
+					<div id="display-reviews">
 					<ul>
 						<% restaurant.reviews.each do |review| %>
 							<li><strong><%= review.rating %></strong> <%= review.thoughts %></li>
 						<% end %>
 					</ul>
+					</div>
 			<% end%>
 	<% else %>
 		No restaurants yet
