--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,6 @@
 <%= form_for [@restaurant, @review] do |f| %>
+	<%= f.label :title %>
+	<%= f.text_area :title %>
 
 	<%= f.label :thoughts %>
 	<%= f.text_area :thoughts %>
