--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -9,7 +9,7 @@
 		<% @restaurants.each do |restaurant| %>
 				<span class="restaurant-name"><h2><%= restaurant.name %> | <%= restaurant.cuisine %></h2></span>
 				<h4 id="review-count"><%= pluralize restaurant.reviews.count, 'review' %></h4>
-				<h4 id="average-rating">Average rating <%= restaurant.average_rating %> </h4>
+				<h4 id="average-rating">Average rating <%= star_rating(restaurant.average_rating) %> </h4>
 					<span class="amend-button"><%= link_to "Edit", edit_restaurant_path(restaurant) %></span>
 					<span class="amend-button"><%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></span>
 					<span class="amend-button"><%= link_to "Review", new_restaurant_review_path(restaurant) %></span>
@@ -19,7 +19,7 @@
 						<% restaurant.reviews.each do |review| %>
 							<li>
 								<h5><strong><%= review.title %></strong></h5>
-								<h4><strong><%= review.rating %></strong></h4>
+								<h4><strong><%= star_rating(review.rating) %></strong></h4>
 								<p><%= review.thoughts %></p>
 							</li>
 						<% end %>
