--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,12 +7,36 @@
 	<% if @restaurants.any? %>
 
 		<% @restaurants.each do |restaurant| %>
-				<span class="restaurant-name"><h2><%= restaurant.name %> | <%= restaurant.cuisine %></h2></span>
-				<h4 id="review-count"><%= pluralize restaurant.reviews.count, 'review' %></h4>
+				<span class="restaurant-name">
+					<h2><%= restaurant.name %> | <%= restaurant.cuisine %></h2>
+				</span>
+
+				<h4 id="review-count">
+					<%= pluralize restaurant.reviews.count, 'review' %>
+				</h4>
+
 				<h4 id="average-rating">Average rating <%= star_rating(restaurant.average_rating) %> </h4>
+				
+				<div id="restaurant-actions">
 					<span class="amend-button"><%= link_to "Edit", edit_restaurant_path(restaurant) %></span>
 					<span class="amend-button"><%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></span>
 					<span class="amend-button"><%= link_to "Review", new_restaurant_review_path(restaurant) %></span>
+				</div>	
+
+				<div id="review-form">
+					<%= form_for [restaurant, @review] do |f| %>
+						<%= f.label :title %>
+						<%= f.text_area :title %>
+
+						<%= f.label :thoughts %>
+						<%= f.text_area :thoughts %>
+
+						<%= f.label :rating %>
+						<%= f.select :rating, 1..5 %>
+
+						<%= f.submit 'Leave Review' %>
+					<% end %>
+				</div>
 					
 					<div id="display-reviews">
 					<ul>
