greeeeeeen. used ajax to successfully update all dynamic content

--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -53,13 +53,13 @@
 	margin-top: 10px;
 }
 
-#average-rating {
+.average-rating {
 	margin-top: 5px;
 	position: relative;
 	margin-left: 15px;
 }
 
-#review-count {
+.review-count {
 	margin-top: 5px;
 	position: relative;
 	font-size: 16px;
@@ -71,7 +71,7 @@
 	margin-top: -48px;
 }
 
-#restaurant-parent-container {
+.restaurant-parent-container {
 	margin-top: 10px;
 	margin-bottom: 40px;
 	border: 2px solid #FFF585;
