added a placeholder and removed the labels for the review input fields

--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -51,6 +51,7 @@
 	display: flex;
 	clear:both;
 	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .average-rating {
@@ -130,3 +131,4 @@ input[type=submit] {
 input[type=submit]:hover {
 	opacity: 1;
 }
+
