--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -14,7 +14,7 @@
 	align-content: flex-center;
 }
 
-#restaurant-list {
+.restaurant-list {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 50px;
