yayyyyyy ajax requests works for both create restaurant and create review

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -46,6 +46,16 @@
 			<input name="commit" type="submit" value="Leave Review">
 		</form>
 
+		<div id="review-container">
+			<ul>
+					
+				<li>
+				
+				</li>
+					
+			</ul>
+		</div>
+		
 	</div>
 
 </template>
