couple errors - capybara ambiguous match. something to do with duplication of content in templates and in the html body.

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -11,14 +11,16 @@
 <% end %>
 
 
-<%= form_for @restaurant do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name, required: true %>
+<section class="create-form">
+  <%= form_for @restaurant do |f| %>
+  	<%= f.label :name %>
+  	<%= f.text_field :name, required: true %>
 
-	<%= f.label :cuisine %>
-	<%= f.text_field :cuisine, required: true %>
+  	<%= f.label :cuisine %>
+  	<%= f.text_field :cuisine, required: true %>
 
-	<%= f.submit 'Add' %>
+  	<%= f.submit 'Add' %>
 
-<% end %>
+  <% end %>
+</section>
 
