--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -4,7 +4,7 @@
 
 #yelp-header {
 	width: 100%;
-	height: 40px;
+	height: 50px;
 	background-color: white;
 	padding: 10px;
 	display: flex;
@@ -12,6 +12,22 @@
 
 #create-restaurant {
 	align-content: flex-center;
+}
+
+.create-form {
+	width: 450px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#restaurant_name {
+	width: 150px;
+	padding: 5px;
+}
+
+#restaurant_cuisine {
+	width: 150px;
+	padding: 5px;
 }
 
 .restaurant-list {
