devise gem added, user sign ups working ok. need to fix the css now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id="flash-notice"><%= notice %></div>
+<div id="flash-notice"><%= notice %> <%= alert %></div>
+
+<% if user_signed_in? %>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>       
+  <%= link_to('Edit registration', edit_user_registration_path) %>
+<% else %>
+  <%= link_to('Login', new_user_session_path)  %>  
+  <%= link_to('Register', new_user_registration_path)  %>
+<% end %>
+
+
 <%= yield %>
 
 </body>
